--- a/Oefeningen/echo-functie/config.json
+++ b/Oefeningen/echo-functie/config.json
@@ -6,7 +6,7 @@
     }
   },
   "labels": [
-    "template"
+    "Functies"
   ],
   "internals": {
     "token": "pcRkJISAvCQbdyJPxC7DIPISKwsG-3wDIBF6F-c5C6sMsWJShdRmMuue_R3HUr7y",
