--- a/Oefeningen/IF/Zon/config.json
+++ b/Oefeningen/IF/Zon/config.json
@@ -5,10 +5,11 @@
     }
   },
   "labels": [
-    "Selectie", "IF"
+    "Selectie",
+    "IF"
   ],
   "internals": {
-    "token": "pcRkJISAvCQbdyJPxC7DIPISKwsG-3wDIBF6F-c5C6sMsWJShdRmMuue_R3HUr7y",
+    "token": "5v5HhmafGrSMw7cwXNWypYRaYT9DIDqUZfUMVJDfc8UZ66a6arrNpmpT-cIrqKJg",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
