--- a/Oefeningen/IF/Zon/evaluation/suite.yaml
+++ b/Oefeningen/IF/Zon/evaluation/suite.yaml
@@ -1,14 +1,16 @@
 - tab: "Testen"
   testcases:
   - stdin: "zon"
-    stdout: "Einde programma"
+    stdout: "De zon schijnt vandaag. Neem je zonnebril mee.\nEinde programma"
   - stdin: "regen"
-    stdout: "Het regent vandaag. Neem je paraplu mee.\nEinde programma"
+    stdout: "Einde programma"
   - stdin: "sneeuw"
     stdout: "Einde programma"
   - stdin: "Zon"
     stdout: "Einde programma"
   - stdin: "Regen"
+    stdout: "Einde programma"
+  - stdin: "Sneeuw"
     stdout: "Einde programma"
   - stdin: " "
     stdout: "Einde programma"
