--- a/Oefeningen/Selectie IF/Sneeuw/config.json
+++ b/Oefeningen/Selectie IF/Sneeuw/config.json
@@ -5,10 +5,11 @@
     }
   },
   "labels": [
-    "IF", "Selectie"
+    "IF",
+    "Selectie"
   ],
   "internals": {
-    "token": "pcRkJISAvCQbdyJPxC7DIPISKwsG-3wDIBF6F-c5C6sMsWJShdRmMuue_R3HUr7y",
+    "token": "Ev97MmXrGf2jpufWr7mrQF_mBrzNXGzfnjkGRPz7jGnX5GRKeRRjvAdh4RqdMhYq",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
