--- a/Oefeningen/Selectie IF/Zon/config.json
+++ b/Oefeningen/Selectie IF/Zon/config.json
@@ -5,11 +5,10 @@
     }
   },
   "labels": [
-    "IF",
-    "Selectie"
+    "IF", "Selectie"
   ],
   "internals": {
-    "token": "gnarxThuUQy3ZPsAAwAegMUiwAYhRXH4t7j-7kiJjFhfDu_2TM6WmPC878Jhi9Ja",
+    "token": "pcRkJISAvCQbdyJPxC7DIPISKwsG-3wDIBF6F-c5C6sMsWJShdRmMuue_R3HUr7y",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
