--- a/Oefeningen/Selectie IF/Sneeuw/evaluation/suite.yaml
+++ b/Oefeningen/Selectie IF/Sneeuw/evaluation/suite.yaml
@@ -3,9 +3,9 @@
   - stdin: "zon"
     stdout: "Einde programma"
   - stdin: "regen"
-    stdout: "Het regent vandaag. Neem je paraplu mee.\nEinde programma"
-  - stdin: "sneeuw"
     stdout: "Einde programma"
+  - stdin: "sneeuw"
+    stdout: "Het sneeuwt vandaag. Neem handschoenen mee.\nEinde programma"
   - stdin: "Zon"
     stdout: "Einde programma"
   - stdin: "Regen"
