--- a/Oefeningen/Selectie IF/1. Wachtwoord/evaluation/suite.yaml
+++ b/Oefeningen/Selectie IF/1. Wachtwoord/evaluation/suite.yaml
@@ -1,7 +1,7 @@
 - tab: "Testen"
   testcases:
   - stdin: "1337"
-    stdout: "Wachtwoord correct.\nEinde programma"
+    stdout: "Wachtwoord correct\nEinde programma"
   - stdin: "1264"
     stdout: "Einde programma"
   - stdin: "9876"
