--- a/Oefeningen/Selectie IF ELSE/1. Wachtwoord/config.json
+++ b/Oefeningen/Selectie IF ELSE/1. Wachtwoord/config.json
@@ -1,11 +1,11 @@
 {
   "description": {
     "names": {
-      "nl": "Wachtwoord v1"
+      "nl": "Wachtwoord v2"
     }
   },
   "labels": [
-    "IF",
+    "IF","Else",
     "Selectie"
   ],
   "internals": {
