--- a/Oefeningen/Selectie IF ELSE/2. Regen of zon/config.json
+++ b/Oefeningen/Selectie IF ELSE/2. Regen of zon/config.json
@@ -1,15 +1,15 @@
 {
   "description": {
     "names": {
-      "nl": "Wachtwoord v1"
+      "nl": "Regen of zon"
     }
   },
   "labels": [
-    "IF",
+    "IF", "Else",
     "Selectie"
   ],
   "internals": {
-    "token": "DqHWSzsjv_u3UKI-_SzUARxqA59_WIJ3BNDg3rtHEygVDbysEDysH-CfFM-NdE47",
+    "token": "Kqv5KUEZ3FwcthCBSh2xQGjApUGd8pHGwZ-Zvb_wHRxyKQJ-Cr664Mv3rTGkFrfb",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
