stored tokens in new activities
This commit was created automatically by Dodona.

--- a/Oefeningen/Selectie IF/4. Regen/config.json
+++ b/Oefeningen/Selectie IF/4. Regen/config.json
@@ -5,10 +5,11 @@
     }
   },
   "labels": [
-    "IF", "Selectie"
+    "IF",
+    "Selectie"
   ],
   "internals": {
-    "token": "pcRkJISAvCQbdyJPxC7DIPISKwsG-3wDIBF6F-c5C6sMsWJShdRmMuue_R3HUr7y",
+    "token": "mbMRW8hdWAwgQxMjk45hhBj_uNnWG8nTQTb3jepbZsEbvg8VSrZ4Y8n6Ur3s3PnP",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
