--- a/Oefeningen/Selectie IF ELSE/6. 18 of ouder/config.json
+++ b/Oefeningen/Selectie IF ELSE/6. 18 of ouder/config.json
@@ -1,16 +1,15 @@
 {
   "description": {
     "names": {
-      "nl": "Wachtwoord"
+      "nl": "18 of ouder"
     }
   },
   "labels": [
-    "IF",
-    "Else",
+    "IF", "Else",
     "Selectie"
   ],
   "internals": {
-    "token": "hZwWu4qgYa-gY4GcpQsbwSbTgD9c5K4arHmQvBfEerh_yKiT7UTK_rIhqwUvydZD",
+    "token": "jpBrF9JRWuzWFS7cW3FIa4N_xqKmCFzN7qZzD28szNVwWxDkyjY25b_bcq-B4RHI",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
