stored tokens in new activities
This commit was created automatically by Dodona.

--- a/Oefeningen/Selectie IF ELSE/3. Overwerktoeslag/config.json
+++ b/Oefeningen/Selectie IF ELSE/3. Overwerktoeslag/config.json
@@ -5,11 +5,12 @@
     }
   },
   "labels": [
-    "IF", "Else",
+    "IF",
+    "Else",
     "Selectie"
   ],
   "internals": {
-    "token": "epmxDu8fUskwPFNUseQSnq-hEFKcrDsbpEQ2fqXdPm35snKMf4zCjx6AXAFPZVA4",
+    "token": "EgwTK8vIXUMwGJBHiuAuaXjFBtWW_e-YnKjAwzHEYYIcb4cFtIBzxbySpYVNPatP",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
