--- a/Oefeningen/Selectie IF ELSE/3. Overwerktoeslag/evaluation/suite.yaml
+++ b/Oefeningen/Selectie IF ELSE/3. Overwerktoeslag/evaluation/suite.yaml
@@ -3,16 +3,16 @@
   - stdin: "45"
     stdout: "Je hebt recht op overwerktoeslag.\nEinde programma"
   - stdin: "38"
-    stdout: "Einde programma"
+    stdout: "Geen recht op overwerktoeslag.\nEinde programma"
   - stdin: "50"
     stdout: "Je hebt recht op overwerktoeslag.\nEinde programma"
   - stdin: "40"
-    stdout: "Einde programma"
+    stdout: "Geen recht op overwerktoeslag.\nEinde programma"
   - stdin: "41"
     stdout: "Je hebt recht op overwerktoeslag.\nEinde programma"
   - stdin: "39"
-    stdout: "Einde programma"
+    stdout: "Geen recht op overwerktoeslag.\nEinde programma"
   - stdin: "43"
     stdout: "Je hebt recht op overwerktoeslag.\nEinde programma"
   - stdin: "20"
-    stdout: "Einde programma"
+    stdout: "Geen recht op overwerktoeslag.\nEinde programma"
