--- a/Oefeningen/Selectie IF ELSE/T1 Plus of min/config.json
+++ b/Oefeningen/Selectie IF ELSE/T1 Plus of min/config.json
@@ -5,10 +5,13 @@
     }
   },
   "labels": [
-    "IF", "Selectie", "Else" , "if/else"
+    "IF",
+    "Selectie",
+    "Else",
+    "if/else"
   ],
   "internals": {
-    "token": "pcRkJISAvCQbdyJPxC7DIPISKwsG-3wDIBF6F-c5C6sMsWJShdRmMuue_R3HUr7y",
+    "token": "uID6zXKBnmXIrvDbEex5Rnr4mHgiPpB_TG_32apntdmss_-2cNQGhfmSv_NsijCS",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
