--- a/Oefeningen/Selectie IF ELSE/5. groter of gelijk aan 100/evaluation/suite.yaml
+++ b/Oefeningen/Selectie IF ELSE/5. groter of gelijk aan 100/evaluation/suite.yaml
@@ -1,16 +1,16 @@
 - tab: "Testen"
   testcases:
   - stdin: "50"
-    stdout: "Het getal is niet groter of gelijk aan 100\nEinde programma"
+    stdout: "Het getal is niet groter of gelijk aan 100.\nEinde programma"
   - stdin: "150"
     stdout: "Het getal is groter of gelijk aan 100.\nEinde programma"
   - stdin: "98"
-    stdout: "Het getal is niet groter of gelijk aan 100\nEinde programma"
+    stdout: "Het getal is niet groter of gelijk aan 100.\nEinde programma"
   - stdin: "99"
-    stdout: "Het getal is niet groter of gelijk aan 100\nEinde programma"
+    stdout: "Het getal is niet groter of gelijk aan 100.\nEinde programma"
   - stdin: "100"
     stdout: "Het getal is groter of gelijk aan 100.\nEinde programma"
   - stdin: "101"
     stdout: "Het getal is groter of gelijk aan 100.\nEinde programma"
   - stdin: "6"
-    stdout: "Het getal is niet groter of gelijk aan 100\nEinde programma"
+    stdout: "Het getal is niet groter of gelijk aan 100.\nEinde programma"
