stored tokens in new activities
This commit was created automatically by Dodona.

--- a/Oefeningen/Selectie IF ELSE/TO DO Leeftijdcategorie /config.json
+++ b/Oefeningen/Selectie IF ELSE/TO DO Leeftijdcategorie /config.json
@@ -5,10 +5,11 @@
     }
   },
   "labels": [
-    "IF", "Selectie"
+    "IF",
+    "Selectie"
   ],
   "internals": {
-    "token": "pcRkJISAvCQbdyJPxC7DIPISKwsG-3wDIBF6F-c5C6sMsWJShdRmMuue_R3HUr7y",
+    "token": "VZ6bp_KtasSCE3JDs-nqWMEmzR3TAqRaACBmIisCIE6IIDphBpXpiZ9AmaVEFSSt",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
