stored tokens in new activities
This commit was created automatically by Dodona.

--- a/Oefeningen/Selectie IF ELSE/T4 Resultaat deling/config.json
+++ b/Oefeningen/Selectie IF ELSE/T4 Resultaat deling/config.json
@@ -5,11 +5,13 @@
     }
   },
   "labels": [
-    "IF", "Else", "if/else",
+    "IF",
+    "Else",
+    "if/else",
     "Selectie"
   ],
   "internals": {
-    "token": "UHWtaJ3tziuTFKUUzfg3UFZApPFdBYU7JpcBK4VdNnJgxS5q_7jxF5bqciyFyrmJ",
+    "token": "-KMnQUKDd-HSK4FAm4SQUmQjtGEsHDZpsJgUWgpbDKZdHSxzSppZiTMnIrEauTxJ",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
