--- a/Oefeningen/afronden/T1 Resultaat deling/evaluation/suite.yaml
+++ b/Oefeningen/afronden/T1 Resultaat deling/evaluation/suite.yaml
@@ -2,11 +2,11 @@
   testcases:
   - stdin: "75.62\n2.3"
     stdout: "Het resultaat is 32.878\nEinde programma"
-  - stdin: "Voer het bedrag in: 25.0\nVoer het delingsgetal in: 3.6"
+  - stdin: "25.0\n3.6"
     stdout: "Het resultaat is 6.944\nEinde programma"
-  - stdin: "Voer het bedrag in: 546\nVoer het delingsgetal in: 3.5"
+  - stdin: "546\n3.5"
     stdout: "Het resultaat is 156.0\nEinde programma"
-  - stdin: "Voer het bedrag in: 5201\nVoer het delingsgetal in: 2"
+  - stdin: "5201\n2"
     stdout: "Het resultaat is 2600.5\nEinde programma"
-  - stdin: "Voer het bedrag in: -12\nVoer het delingsgetal in: 2.4"
+  - stdin: "-12\n2.4"
     stdout: "Het resultaat is -5.0\nEinde programma"
