stored tokens in new activities
This commit was created automatically by Dodona.

--- a/Oefeningen/input output/Namen omwisselen/config.json
+++ b/Oefeningen/input output/Namen omwisselen/config.json
@@ -7,12 +7,14 @@
   "evaluation": {
     "pythia_judge": "output"
   },
-  "labels": [ "input", "output",
+  "labels": [
+    "input",
+    "output",
     "Python"
   ],
   "access": "public",
   "internals": {
-    "token": "IezP_XxRaxIXkWr6b44qBZtWrZqMViHV3TIUT26Bi2G42B7HsUCcVRjIDpjV3c2b",
+    "token": "bcHIpH6cUbNhAgqhPt6f7d4RbZmjDQDbV6_jZp-wWUgmVakJnA83eWY_2xQ2fi5h",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
