--- a/Oefeningen/input output/dirconfig.json
+++ b/Oefeningen/input output/dirconfig.json
@@ -1,7 +1,6 @@
 {
-  "evaluation": {
-    "handler": "tested",
-    "test_suite": "suite.yaml"
-  },
-  "programming_language": "python"
+    "evaluation": {
+        "handler": "python"
+    },
+    "programming_language": "python"
 }
