--- a/Evaluatie/input output/T3 Som van 10 cijfers/config.json
+++ b/Evaluatie/input output/T3 Som van 10 cijfers/config.json
@@ -7,5 +7,13 @@
   "evaluation": {
     "pythia_judge": "output"
   },
-  "labels": ["input","output","sequentie"]
+  "labels": [
+    "input",
+    "output",
+    "sequentie"
+  ],
+  "internals": {
+    "token": "XeW2DSwbAGa3ihxmg5c4PHcbpKAcxsSSdn-INJtUamhKkD3AxcNkUYbwUJkV3AhC",
+    "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
+  }
 }
