--- a/Oefeningen/Selectie IF ELSE/TO DO Factuurbedrag met korting/evaluation/suite.yaml
+++ b/Oefeningen/Selectie IF ELSE/TO DO Factuurbedrag met korting/evaluation/suite.yaml
@@ -1,7 +1,6 @@
 - tab: "Testen"
   testcases:
-  - stdin: "75"
-    stdout: "Wat is het factuurbedrag? 
-            Je hebt recht op 2.25 euro korting.
-            Het bedrag inclusief korting bedraagt 72.75 euro.
+  - expression: "Wat is het factuurbedrag? 75.0"
+    return: "Je hebt recht op 2.25 euro korting.\n
+            Het bedrag inclusief korting bedraagt 72.75 euro.\n
             Einde programma"
