--- a/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
+++ b/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
@@ -1,7 +1,16 @@
 - tab: "Som van 10 cijfers"
   testcases:
-    - arguments: [1,2,3,4,5,6,7,8,9,10]
+    - stdin: |
+       Geef een eerste getal: 1
+       Geef nog een getal: 2
+       Geef nog een getal: 3
+       Geef nog een getal: 4
+       Geef nog een getal: 5
+       Geef nog een getal: 6
+       Geef nog een getal: 7
+       Geef nog een getal: 8
+       Geef nog een getal: 9
+       Geef nog een laatste getal: 10
       stdout: 'De som bedraagt 55'
-    - arguments: [5,10,6,11,7,12,8,13,9,14]
-      stdout: 'De som bedraagt 95'
+
 
