--- a/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
+++ b/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
@@ -12,5 +12,17 @@
        9
        10
       stdout: 'De som bedraagt 55'
+    - stdin: |
+       5
+       10
+       6
+       11
+       7
+       12
+       8
+       13
+       9
+       14
+      stdout: 'De som bedraagt 95'
 
 
