--- a/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
+++ b/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
@@ -1,16 +1,15 @@
 - tab: "Som van 10 cijfers"
   testcases:
-    - statement: |
-        getal1 = int(input("Geef een eerste getal: "))
-        getal2 = int(input("Geef nog een getal: "))
-        getal3 = int(input("Geef nog een getal: "))
-        getal4 = int(input("Geef nog een getal: "))
-        getal5 = int(input("Geef nog een getal: "))
-        getal6 = int(input("Geef nog een getal: "))
-        getal7 = int(input("Geef nog een getal: "))
-        getal8 = int(input("Geef nog een getal: "))
-        getal9 = int(input("Geef nog een getal: "))
-        getal10 = int(input("Geef nog een laatste getal: "))
+    - statement: 'getal1 = int(input("Geef een eerste getal: "))'
+    - statement: 'getal2 = int(input("Geef nog een getal: "))'
+    - statement: 'getal3 = int(input("Geef nog een getal: "))'
+    - statement: 'getal4 = int(input("Geef nog een getal: "))'
+    - statement: 'getal5 = int(input("Geef nog een getal: "))'
+    - statement: 'getal6 = int(input("Geef nog een getal: "))'
+    - statement: 'getal7 = int(input("Geef nog een getal: "))'
+    - statement: 'getal8 = int(input("Geef nog een getal: "))'
+    - statement: 'getal9 = int(input("Geef nog een getal: "))'
+    - statement: 'getal10 = int(input("Geef nog een laatste getal: "))'
     - stdin: |
        1
        2
