--- a/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
+++ b/Oefeningen/input output/T3 Som van 10 cijfers/evaluation/suite.yaml
@@ -1,27 +1,28 @@
 - tab: "Som van 10 cijfers"
-  testcases:
-    - statement: 'getal1 = int(input("Geef een eerste getal: "))'
-    - statement: 'getal2 = int(input("Geef nog een getal: "))'
-    - statement: 'getal3 = int(input("Geef nog een getal: "))'
-    - statement: 'getal4 = int(input("Geef nog een getal: "))'
-    - statement: 'getal5 = int(input("Geef nog een getal: "))'
-    - statement: 'getal6 = int(input("Geef nog een getal: "))'
-    - statement: 'getal7 = int(input("Geef nog een getal: "))'
-    - statement: 'getal8 = int(input("Geef nog een getal: "))'
-    - statement: 'getal9 = int(input("Geef nog een getal: "))'
-    - statement: 'getal10 = int(input("Geef nog een laatste getal: "))'
-    - stdin: |
-       1
-       2
-       3
-       4
-       5
-       6
-       7
-       8
-       9
-       10
-      stdout: 'De som bedraagt 55'
+  contexts:
+     - testcases:
+         - statement: 'getal1 = int(input("Geef een eerste getal: "))'
+         - statement: 'getal2 = int(input("Geef nog een getal: "))'
+         - statement: 'getal3 = int(input("Geef nog een getal: "))'
+         - statement: 'getal4 = int(input("Geef nog een getal: "))'
+         - statement: 'getal5 = int(input("Geef nog een getal: "))'
+         - statement: 'getal6 = int(input("Geef nog een getal: "))'
+         - statement: 'getal7 = int(input("Geef nog een getal: "))'
+         - statement: 'getal8 = int(input("Geef nog een getal: "))'
+         - statement: 'getal9 = int(input("Geef nog een getal: "))'
+         - statement: 'getal10 = int(input("Geef nog een laatste getal: "))'
+         - stdin: |
+            1
+            2
+            3
+            4
+            5
+            6
+            7
+            8
+            9
+            10
+         - stdout: 'De som bedraagt 55'
 
 
 
