--- a/Oefeningen/Selectie IF ELSE/T4 Factuurbedrag met korting/evaluation/suite.yaml
+++ b/Oefeningen/Selectie IF ELSE/T4 Factuurbedrag met korting/evaluation/suite.yaml
@@ -1,18 +1,10 @@
 - tab: "Testen"
   testcases:
   - stdin: "75.0"
-    stdout: "Je hebt recht op 2.25 euro korting.\n
-            Het bedrag inclusief korting bedraagt 72.75 euro.\n
-            Einde programma"
+    stdout: "Je hebt recht op 2.25 euro korting.\nHet bedrag inclusief korting bedraagt 72.75 euro.\nEinde programma"
   - stdin: "86.1"
-    stdout: "Je hebt recht op 2.58 euro korting.\n
-            Het bedrag inclusief korting bedraagt 83.52 euro.\n
-            Einde programma"
+    stdout: "Je hebt recht op 2.58 euro korting.\nHet bedrag inclusief korting bedraagt 83.52 euro.\nEinde programma"
   - stdin: "6.8"
-    stdout: "Je hebt recht op 0.2 euro korting.\n
-            Het bedrag inclusief korting bedraagt 6.6 euro.\n
-            Einde programma"
+    stdout: "Je hebt recht op 0.2 euro korting.\nHet bedrag inclusief korting bedraagt 6.6 euro.\nEinde programma"
   - stdin: "152.6"
-    stdout: "Je hebt recht op 7.63 euro korting.\n
-            Het bedrag inclusief korting bedraagt 144.97 euro.\n
-            Einde programma"
+    stdout: "Je hebt recht op 7.63 euro korting.\nHet bedrag inclusief korting bedraagt 144.97 euro.\nEinde programma"
