--- a/Evaluatie/T3 Leeftijdcategorie/config.json
+++ b/Evaluatie/T3 Leeftijdcategorie/config.json
@@ -4,6 +4,9 @@
       "nl": "Leeftijdscategorie"
     }
   },
+  "evaluation": {
+    "pythia_judge": "output"
+  },
   "labels": [
     "IF",
     "Selectie"
