--- a/Evaluatie/T3 Leeftijdcategorie/evaluation/0.in
+++ b/Evaluatie/T3 Leeftijdcategorie/evaluation/0.in
@@ -1,11 +1,11 @@
-Voer jouw naam in: Jane
-Voer jouw geboortejaar in: 2004
-Geef het huidig jaar in: 2024
+Jane
+2004
+2024
 
-Voer jouw naam in: John
-Voer jouw geboortejaar in: 2009
-Geef het huidig jaar in: 2024
+John
+2009
+2024
 
-Voer jouw naam in: Jill
-Voer jouw geboortejaar in: 1975
-Geef het huidig jaar in: 2024
+Jill
+1975
+2024
