--- a/Module 6 Functies maken/Oefeningen/echo-functie/config.json
+++ b/Module 6 Functies maken/Oefeningen/echo-functie/config.json
@@ -4,11 +4,20 @@
       "nl": "Echofunctie"
     }
   },
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+  
   "labels": [
     "Functies"
-  ],
+    ],
+  
   "internals": {
     "token": "CWpF_5drqgqSZdR-tTtWijVfH6KX4Aqqn7wnNW6K9vGH3eesFqnqvs3IsgynR7tn",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
-  }
+  },
+  "programming_language": "python",
+  "access": "public"
+  
 }
