--- a/Module 2 Sequentie/John Doe/evaluation/suite.yaml
+++ b/Module 2 Sequentie/John Doe/evaluation/suite.yaml
@@ -1,7 +1,7 @@
-- tab: "John Doe"
+- tab: "Feedback"
   testcases:
-    - statement: 'naam = John'
-    - statement: 'voornaam = Doe'
-    - statement: 'volledige_naam = naam + " " + voornaam'
-      stdout: 'John Doe'
+    - statement: "naam = John"
+    - statement: "voornaam = Doe"
+    - statement: "volledige_naam = naam + " " + voornaam"
+      stdout: "John Doe"
 
