--- a/Module 2 Sequentie/John Doe/config.json
+++ b/Module 2 Sequentie/John Doe/config.json
@@ -5,14 +5,15 @@
     }
   },
   "evaluation": {
-    "handler": "tested",
-    "test_suite": "suite.yaml"
+    "handler": "python",
+    "pythia_judge": "output"
   },
   
   "labels": [
-    "Sequentie", "output"
+    "Sequentie", "output", "Python"
     ],
   
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "CWpF_5drqgqSZdR-tTtWijVfH6KX4Aqqn7wnNW6K9vGH3eesFqnqvs3IsgynR7tn",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
