--- a/Oefeningen/Selectie IF ELSE/3. Overwerktoeslag/config.json
+++ b/Oefeningen/Selectie IF ELSE/3. Overwerktoeslag/config.json
@@ -9,6 +9,13 @@
     "Else","if/else",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "EgwTK8vIXUMwGJBHiuAuaXjFBtWW_e-YnKjAwzHEYYIcb4cFtIBzxbySpYVNPatP",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
