--- a/Oefeningen/Selectie IF ELSE/T3 Factuurkorting/config.json
+++ b/Oefeningen/Selectie IF ELSE/T3 Factuurkorting/config.json
@@ -8,6 +8,13 @@
     "IF", "Else", "if/else",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "UHWtaJ3tziuTFKUUzfg3UFZApPFdBYU7JpcBK4VdNnJgxS5q_7jxF5bqciyFyrmJ",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
