--- a/Oefeningen/Selectie IF/1. Wachtwoord/config.json
+++ b/Oefeningen/Selectie IF/1. Wachtwoord/config.json
@@ -8,6 +8,13 @@
     "IF",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "DqHWSzsjv_u3UKI-_SzUARxqA59_WIJ3BNDg3rtHEygVDbysEDysH-CfFM-NdE47",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
