--- a/Oefeningen/input output/T3 Som van 10 cijfers/config.json
+++ b/Oefeningen/input output/T3 Som van 10 cijfers/config.json
@@ -9,6 +9,12 @@
     "output",
     "sequentie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
   "internals": {
     "token": "XeW2DSwbAGa3ihxmg5c4PHcbpKAcxsSSdn-INJtUamhKkD3AxcNkUYbwUJkV3AhC",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
