--- a/Oefeningen/Selectie IF ELSE/1. Wachtwoord/config.json
+++ b/Oefeningen/Selectie IF ELSE/1. Wachtwoord/config.json
@@ -9,6 +9,13 @@
     "Else","if/else",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "hZwWu4qgYa-gY4GcpQsbwSbTgD9c5K4arHmQvBfEerh_yKiT7UTK_rIhqwUvydZD",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
