--- a/Oefeningen/Selectie IF ELSE/2. Regen of zon/config.json
+++ b/Oefeningen/Selectie IF ELSE/2. Regen of zon/config.json
@@ -8,6 +8,13 @@
     "IF", "Else","if/else",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "Kqv5KUEZ3FwcthCBSh2xQGjApUGd8pHGwZ-Zvb_wHRxyKQJ-Cr664Mv3rTGkFrfb",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
