--- a/Oefeningen/Selectie IF ELSE/6. 18 of ouder/config.json
+++ b/Oefeningen/Selectie IF ELSE/6. 18 of ouder/config.json
@@ -8,6 +8,13 @@
     "IF", "Else","if/else",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "jpBrF9JRWuzWFS7cW3FIa4N_xqKmCFzN7qZzD28szNVwWxDkyjY25b_bcq-B4RHI",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
