--- a/Oefeningen/Selectie IF ELSE/T2 Vermenigvuldigen met 9/config.json
+++ b/Oefeningen/Selectie IF ELSE/T2 Vermenigvuldigen met 9/config.json
@@ -10,6 +10,13 @@
     "Else",
     "if/else"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "Yvakt4jRqMhCj2SPSnBZhr2g9jSHa_N2pJ8vDgNIvdTPZvFnJU4iDIkvDtvSyMFJ",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
