--- a/Oefeningen/Selectie IF ELSE/T4 Factuurbedrag met korting/config.json
+++ b/Oefeningen/Selectie IF ELSE/T4 Factuurbedrag met korting/config.json
@@ -10,6 +10,12 @@
     "Else",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+  
   "internals": {
     "token": "udAc9Umzzqw_gMqrujKj-ayAfs7uzzD_xkez6aJhJ8fSeEmhVYFjNy8cjWS6QVyf",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
