--- a/Oefeningen/Selectie IF/6. Ouder dan 18/config.json
+++ b/Oefeningen/Selectie IF/6. Ouder dan 18/config.json
@@ -8,6 +8,13 @@
     "IF",
     "Selectie"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "6BST8dQstAnbRRc5IztEv7FWIgGSTqunttG52TdRV2rHr-bYXJZ-Qgn2DTq6URKg",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
