--- a/Module 6 Functies maken/Oefeningen/even of oneven functie/config.json
+++ b/Module 6 Functies maken/Oefeningen/even of oneven functie/config.json
@@ -7,6 +7,13 @@
   "labels": [
     "Functies"
   ],
+
+  "evaluation": {
+    "handler": "tested",
+    "test_suite": "suite.yaml"
+  },
+
+  
   "internals": {
     "token": "XHt3PN9x6DkkG9mCZAG7_hTGyUbxcfpKSd7YpI3pNpnxqHtD7ExaiiPt9MrIDVra",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
