--- a/Module 6 Functies maken/Oefeningen/dirconfig.json
+++ b/Module 6 Functies maken/Oefeningen/dirconfig.json
@@ -1,7 +1,6 @@
 {
-  "evaluation": {
-    "handler": "tested",
-    "test_suite": "suite.yaml"
-  },
-  "programming_language": "python"
+  "programming_language": "python",
+  "access": "public"
+  
+
 }
