--- a/Module 2 Sequentie/T1 Namen omwisselen/config.json
+++ b/Module 2 Sequentie/T1 Namen omwisselen/config.json
@@ -1,20 +1,21 @@
 {
   "description": {
     "names": {
-      "nl": "Brandende kaars"
+      "nl": "Namen omwisselen"
     }
   },
   "evaluation": {
+    "handler": "python",
     "pythia_judge": "output"
   },
   "labels": [
-    "Python",
     "input",
-    "output"
+    "output",
+    "Python"
   ],
   "access": "public",
   "internals": {
-    "token": "R_nWTT83RA7tpeKgc5iBqC4pipayzGWpsHJRtk9HHYkcxfYS_UdYK3pHcuxc5S6J",
+    "token": "bcHIpH6cUbNhAgqhPt6f7d4RbZmjDQDbV6_jZp-wWUgmVakJnA83eWY_2xQ2fi5h",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
