--- a/Module 4 Functies en modules/afronden/T4 - Vierkanten in de oudheid/config.json
+++ b/Module 4 Functies en modules/afronden/T4 - Vierkanten in de oudheid/config.json
@@ -8,11 +8,12 @@
     }
   },
   "evaluation": {
+    "handler": "python",
     "pythia_judge": "output"
   },
   "labels": [
     "python",
-    "sequentie",
+    "functies",
     "Afronden"
   ],
   "internals": {
