--- a/Module 2 Sequentie/2.8 Type casting/1 Oppervlakte rechthoek/config.json
+++ b/Module 2 Sequentie/2.8 Type casting/1 Oppervlakte rechthoek/config.json
@@ -11,6 +11,9 @@
   "labels": [
     "Sequentie",
     "output",
+    "input",
+    "typecasting",
+    "concatenatie",
     "Python"
   ],
   "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
