--- a/Module 2 Sequentie/2.9 Complexe operatoren/3 Even en oneven kwadraten/config.json
+++ b/Module 2 Sequentie/2.9 Complexe operatoren/3 Even en oneven kwadraten/config.json
@@ -1,7 +1,7 @@
 {
   "description": {
     "names": {
-      "nl": "Oppervlakte en omtrek vierkant"
+      "nl": "Even en oneven kwadraten"
     }
   },
   "evaluation": {
@@ -12,14 +12,15 @@
     "Sequentie",
     "output",
     "input",
-    "typecasting",
     "concatenatie",
-    "Python",
-    "Robbe Wulgaert"
+    "typecasting",
+    "complexe operatoren",
+    "Robbe Wulgaert",
+    "Python"
   ],
   "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
-    "token": "7jHa9_dRrpshn_NEyxDBAhIaCkbwkW4U6W5mqhqW7MuGBYJw6HHBtJKnMwrCSpzH",
+    "token": "YG8PPfWbXgzjWXTyzzg38QgK8BhWC6Va5-ea7QdqYpnq3TzndrJBTuZNMSngG6ZV",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
   }
 }
