--- a/Module 3 Selectie/3.4 Selectie IF ELSE/2 Regen of zon/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/2 Regen of zon/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "Kqv5KUEZ3FwcthCBSh2xQGjApUGd8pHGwZ-Zvb_wHRxyKQJ-Cr664Mv3rTGkFrfb",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
