--- a/Module 3 Selectie/3.4 Selectie IF ELSE/5 groter of gelijk aan 100/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/5 groter of gelijk aan 100/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "k7a_D2V9r_4_XEAYEs38xB3-kY3kdNSxmC3GbFpXeAwz5JEFDqEneNbxkBeXphht",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
