--- a/Module 3 Selectie/3.4 Selectie IF ELSE/6 18 of ouder/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/6 18 of ouder/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "jpBrF9JRWuzWFS7cW3FIa4N_xqKmCFzN7qZzD28szNVwWxDkyjY25b_bcq-B4RHI",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
