--- a/Module 3 Selectie/3.4 Selectie IF ELSE/T1 Plus of min/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/T1 Plus of min/config.json
@@ -16,7 +16,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "uID6zXKBnmXIrvDbEex5Rnr4mHgiPpB_TG_32apntdmss_-2cNQGhfmSv_NsijCS",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
