--- a/Module 3 Selectie/3.3 Selectie IF/1 Wachtwoord/config.json
+++ b/Module 3 Selectie/3.3 Selectie IF/1 Wachtwoord/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "DqHWSzsjv_u3UKI-_SzUARxqA59_WIJ3BNDg3rtHEygVDbysEDysH-CfFM-NdE47",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
