--- a/Module 3 Selectie/3.3 Selectie IF/3 Overwerktoeslag/config.json
+++ b/Module 3 Selectie/3.3 Selectie IF/3 Overwerktoeslag/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "epmxDu8fUskwPFNUseQSnq-hEFKcrDsbpEQ2fqXdPm35snKMf4zCjx6AXAFPZVA4",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
