--- a/Module 3 Selectie/3.3 Selectie IF/4 Regen/config.json
+++ b/Module 3 Selectie/3.3 Selectie IF/4 Regen/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "mbMRW8hdWAwgQxMjk45hhBj_uNnWG8nTQTb3jepbZsEbvg8VSrZ4Y8n6Ur3s3PnP",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
