--- a/Module 3 Selectie/3.3 Selectie IF/6 Ouder dan 18/config.json
+++ b/Module 3 Selectie/3.3 Selectie IF/6 Ouder dan 18/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "6BST8dQstAnbRRc5IztEv7FWIgGSTqunttG52TdRV2rHr-bYXJZ-Qgn2DTq6URKg",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
