--- a/Module 3 Selectie/3.4 Selectie IF ELSE/1 Wachtwoord/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/1 Wachtwoord/config.json
@@ -15,7 +15,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "hZwWu4qgYa-gY4GcpQsbwSbTgD9c5K4arHmQvBfEerh_yKiT7UTK_rIhqwUvydZD",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
