--- a/Module 3 Selectie/3.4 Selectie IF ELSE/T2 Vermenigvuldigen met 9/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/T2 Vermenigvuldigen met 9/config.json
@@ -16,7 +16,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "Yvakt4jRqMhCj2SPSnBZhr2g9jSHa_N2pJ8vDgNIvdTPZvFnJU4iDIkvDtvSyMFJ",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
