--- a/Module 3 Selectie/3.4 Selectie IF ELSE/T3 Factuurkorting/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/T3 Factuurkorting/config.json
@@ -14,7 +14,7 @@
     "test_suite": "suite.yaml"
   },
 
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "UHWtaJ3tziuTFKUUzfg3UFZApPFdBYU7JpcBK4VdNnJgxS5q_7jxF5bqciyFyrmJ",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
