--- a/Module 3 Selectie/3.4 Selectie IF ELSE/T4 Factuurbedrag met korting/config.json
+++ b/Module 3 Selectie/3.4 Selectie IF ELSE/T4 Factuurbedrag met korting/config.json
@@ -15,7 +15,7 @@
     "handler": "tested",
     "test_suite": "suite.yaml"
   },
-  
+  "contact": "Katleen Trio <katleen.trio@campus-keerbergen.be>",
   "internals": {
     "token": "udAc9Umzzqw_gMqrujKj-ayAfs7uzzD_xkez6aJhJ8fSeEmhVYFjNy8cjWS6QVyf",
     "_info": "These fields are used for internal bookkeeping in Dodona, please do not change them."
