--- a/Module 2 Sequentie/2.3 Concatenatie/1 De familie Backeljau/evaluation/0.in
+++ b/Module 2 Sequentie/2.3 Concatenatie/1 De familie Backeljau/evaluation/0.in
@@ -8,4 +8,4 @@ De bomma Thérèse is 74
 De buurman Marcel is 40
 
 Mama Maria was 21 toen ze haar oudste zoon Franky kreeg.
-Papa Cois was 26 toe hij papa werd van dochter Sabrina.
+Papa Cois was 26 toen hij papa werd van dochter Sabrina.
