--- a/Module 5 Iteratie/5.1.6 Vaardigheid/01 Tafels van vermenigvuldiging/config.json
+++ b/Module 5 Iteratie/5.1.6 Vaardigheid/01 Tafels van vermenigvuldiging/config.json
@@ -5,6 +5,11 @@
       "en": "Multiplication tables"
     }
   },
+  "evaluation": {
+    "handler": "python",
+    "pythia_judge": "output"
+  },
+  
   "labels": ["While", "loop","Iteratie"
 
   ],
