--- a/Module 5 Iteratie/5.1.6 Vaardigheid/01 Tafels van vermenigvuldiging/config.json
+++ b/Module 5 Iteratie/5.1.6 Vaardigheid/01 Tafels van vermenigvuldiging/config.json
@@ -1,15 +1,15 @@
 {
   "description": {
     "names": {
-      "nl": "Tafels van vermenigvuldiging",
-      "en": "Multiplication tables"
+      "nl": "Tafels van vermenigvuldiging"
+      
     }
   },
   "evaluation": {
     "handler": "python",
     "pythia_judge": "output"
   },
-  
+
   "labels": ["While", "loop","Iteratie"
 
   ],
