--- a/Toetsvragen/Toetsvraag 4 - Zwembad van de Buren/config.json
+++ b/Toetsvragen/Toetsvraag 4 - Zwembad van de Buren/config.json
@@ -4,8 +4,8 @@
   "access": "public",
   "description": {
     "names": {
-      "nl": "Selectie Toetsvraag - Zwembad bij de buren",
-      "en": "Test Exercise - Neighbour's swimming pool"
+      "nl": "Toetsvraag - Zwembad bij de buren",
+      "en": "Neighbour's swimming pool"
     }
   },
   "evaluation": {
