updated config for Zwembad bij de buren
This commit was created automatically by Dodona.

--- a/Toetsvragen/Toetsvraag 4 - Zwembad van de Buren/config.json
+++ b/Toetsvragen/Toetsvraag 4 - Zwembad van de Buren/config.json
@@ -13,11 +13,12 @@
     "pythia_judge": "output"
   },
   "labels": [
+    "functies",
     "python",
     "robbe wulgaert",
-    "functies",
     "modules",
-    "afronden"
+    "afronden",
+    "selectie"
   ],
   "contact": "Robbe W <robbe.wulgaert@sintlievenscollege.be>",
   "internals": {
